--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -1,6 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+system("ansible-galaxy install -r ../roles/requirements.yml -p ./roles/ --force")
+
 # All Vagrant configuration is done below. The "2" in Vagrant.configure
 # configures the configuration version (we support older styles for
 # backwards compatibility). Please don't change it unless you know what
@@ -38,7 +40,7 @@ Vagrant.configure("2") do |config|
 
   # Launch Ansible Playbook
   config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "toolbox.yml"
+    ansible.playbook = "../toolbox.yml"
     ansible.inventory_path = "inventory"
   end
 
