--- a/test/Vagrantfile
+++ b/test/Vagrantfile
@@ -40,7 +40,7 @@ Vagrant.configure("2") do |config|
 
   # Launch Ansible Playbook
   config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "../toolbox.yml"
+    ansible.playbook = "toolbox.yml"
     ansible.inventory_path = "inventory"
   end
 
