--- a/freeipa.yml
+++ b/freeipa.yml
@@ -3,9 +3,9 @@
   hosts: all
   gather_facts: True
   become: yes
+
   vars_files:
     - vars/main.yml
+
   roles:
-    - { role: victorock.common }
-    - { role: victorock.security }
-    - { role: victorock.gitlab }
+    - { role: victorock.freeipa }
