Toolbox Self-contained

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,3 +1,19 @@
+- src: git+https://github.com/victorock/ansible-role-common.git
+  version: dev
+  name: victorock.linux-common
+
+- src: git+https://github.com/victorock/ansible-role-security.git
+  version: dev
+  name: victorock.linux-security
+
+- src: git+https://github.com/victorock/ansible-role-aws-security.git
+  version: dev
+  name: victorock.aws-security
+
+- src: git+https://github.com/victorock/ansible-role-aws-cloud.git
+  version: dev
+  name: victorock.aws-cloud
+
 - src: git+https://github.com/victorock/ansible-role-gitlab.git
   version: dev
   name: victorock.gitlab
