--- a/toolbox/site.yml
+++ b/toolbox/site.yml
@@ -1,4 +1,4 @@
-- include: aws.yml
-- include: gitlab.yml
+- import_playbook: aws.yml
+- import_playbook: gitlab.yml
 # Future
 #- include: freeipa.yml
