--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
-- include: aws.yml
-- include: gitlab.yml
+- import_playbook: aws.yml
+- import_playbook: gitlab.yml
   when: ec2cloud_exact_count|int > 0
 # Future
 #- import_playbook: freeipa.yml
