--- a/applications/freeipa/deploy.yml
+++ b/applications/freeipa/deploy.yml
@@ -3,6 +3,12 @@
   become: true
 
   tasks:
-    - include_role:
+    - name: "victorock.linux"
+      include_role:
+        name: victorock.linux
+        tasks_from: run
+
+    - name: "victorock.ipaserver"
+      include_role:
         name: victorock.ipaserver
         tasks_from: run
