--- a/applications/freeipa/roles/requirements.yml
+++ b/applications/freeipa/roles/requirements.yml
@@ -1,3 +1,8 @@
+- src: https://github.com/victorock/ansible-role-linux.git
+  scm: git
+  version: dev
+  name: victorock.linux
+
 - src: https://github.com/victorock/ansible-role-ipa.git
   scm: git
   version: dev
