--- a/applications/gitlab/deploy.yml
+++ b/applications/gitlab/deploy.yml
@@ -2,5 +2,12 @@
   hosts: gitlab
   become: true
 
-  roles:
-    - role: victorock.gitlab
+  tasks:
+    - name: "victorock.linux"
+      include_role:
+        name: victorock.linux
+        tasks_from: run
+
+    - name: "geerlingguy.gitlab"
+      include_role:
+        name: geerlingguy.gitlab
