--- a/applications/jenkins/group_vars/gce_config/cloud_compute.instance.yml
+++ b/applications/jenkins/group_vars/gce_config/cloud_compute.instance.yml
@@ -1,14 +1,14 @@
 cloud_compute:
   instance:
-    jenkins-000:
-      name: jenkins-000
+    jenkins:
+      name: jenkins
       size: n1-standard-1
       image: centos-7
       credential:
         username: jdacosta
-        key: jenkins
+        key: jenkins-devops-victorock-io
       network:
-        subnet: devops
-        public: yes
+        subnet: devops-victorock-io
+        public: jenkins-devops-victorock-io
       tags:
         - jenkins
