--- a/applications/jenkins/roles/requirements.yml
+++ b/applications/jenkins/roles/requirements.yml
@@ -1,4 +1,10 @@
 - name: geerlingguy.jenkins
+
+- src: https://github.com/victorock/ansible-role-linux.git
+  scm: git
+  version: dev
+  name: victorock.linux
+
 - src: https://github.com/victorock/ansible-role-gce-config.git
   scm: git
   version: dev
