--- a/applications/gitlab/group_vars/gce_config/cloud_network.subnet.yml
+++ b/applications/gitlab/group_vars/gce_config/cloud_network.subnet.yml
@@ -1,5 +1,5 @@
 cloud_network:
   subnet:
-    devops:
-      name: devops
+    devops-victorock-io:
+      name: devops-victorock-io
       cidr: "{{ cloud_provider.cidr | ipsubnet(24, 1) }}"
