--- a/applications/gitlab/provision.yml
+++ b/applications/gitlab/provision.yml
@@ -6,6 +6,7 @@
   become: false
 
   tasks:
-    - include_role:
+    - name: "victorock.gce_config"
+      include_role:
         name: victorock.gce_config
         tasks_from: run
