--- a/applications/gitlab/roles/requirements.yml
+++ b/applications/gitlab/roles/requirements.yml
@@ -1,9 +1,12 @@
+
+- name: geerlingguy.gitlab
+
+- src: https://github.com/victorock/ansible-role-linux.git
+  scm: git
+  version: dev
+  name: victorock.linux
+
 - src: https://github.com/victorock/ansible-role-gce-config.git
   scm: git
   version: dev
   name: victorock.gce_config
-
-- src: https://github.com/victorock/ansible-role-gitlab.git
-  scm: git
-  version: dev
-  name: victorock.gitlab
