--- a/applications/gitlab/deploy.yml
+++ b/applications/gitlab/deploy.yml
@@ -1,7 +1,7 @@
 - name: "Deploy gitlab"
   hosts: gitlab
   become: true
-  gather_facts: yes
+  gather_facts: true
 
   tasks:
     - name: "victorock.linux"
