--- a/applications/jenkins/deploy.yml
+++ b/applications/jenkins/deploy.yml
@@ -2,7 +2,7 @@
 - name: "Deploy jenkins"
   hosts: jenkins
   become: true
-  gather_facts: yes
+  gather_facts: true
 
   tasks:
     - name: "victorock.linux"
