--- a/applications/ansible-tower/group_vars/ansible-tower/config.organization.inventories.yml
+++ b/applications/ansible-tower/group_vars/ansible-tower/config.organization.inventories.yml
@@ -5,9 +5,15 @@ ansible_tower_config:
       inventories:
         - name: "infraops"
           description: "infraops"
+
         - name: "netops"
           description: "netops"
+
         - name: "sysops"
           description: "sysops"
+
+        - name: "devops"
+          description: "devops"
+
         - name: "secops"
           description: "secops"
