--- a/applications/ansible-tower/group_vars/ansible-tower/config.setting.license.yml
+++ b/applications/ansible-tower/group_vars/ansible-tower/config.setting.license.yml
@@ -1,4 +1,4 @@
 ---
 ansible_tower_config:
   setting:
-    license: "{{ lookup('file', 'files/tower_license.txt') | from_json }}"
+    license: "{{ lookup('file', 'vault/licenses/tower_license.txt') | from_json }}"
