--- a/applications/jenkins/provision.yml
+++ b/applications/jenkins/provision.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Provision Instances"
-  hosts: gce_config
+  hosts: localhost
   connection: local
   gather_facts: false
   become: false
