--- a/applications/ansible-tower/group_vars/ansible-tower/config.organization.credentials.yml
+++ b/applications/ansible-tower/group_vars/ansible-tower/config.organization.credentials.yml
@@ -3,43 +3,124 @@ ansible_tower_config:
   organization:
     DEMO:
       credentials:
+###############################
+#### SCM - DEFAULT
+###############################
+
         - name: "empty-scm"
-          username: Null
-          password: Null
           kind: "scm"
           description: "Empty credential"
+          username: Null
+          password: Null
+
         - name: "empty-ssh"
-          username: empty
-          password: empty
           kind: "ssh"
           description: "Empty credential"
+          username: "empty"
+          password: "empty"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
+###############################
+#### NETWORK
+###############################
+
         - name: "network-nxos-ssh"
           kind: "ssh"
           description: "Credential for nxos"
-          username: vagrant
-          password: vagrant
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
         - name: "network-nxos-net"
           kind: "net"
           description: "Credential for nxos"
-          username: vagrant
-          password: vagrant
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
         - name: "network-ios-ssh"
           kind: "ssh"
           description: "Credential for ios"
-          username: vagrant
-          password: vagrant
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
         - name: "network-ios-net"
           kind: "net"
           description: "Credential for ios"
-          username: vagrant
-          password: vagrant
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
+###############################
+#### SYSTEM
+###############################
+
         - name: "system-linux-ssh"
           kind: "ssh"
           description: "Credential for Linux"
-          username: vagrant
-          password: vagrant
+          username: "changeme"
+          password: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+
         - name: "system-windows-winrm"
           kind: "ssh"
           description: "Credential for Windows"
-          username: vagrant
-          password: vagrant
+          username: "changeme"
+          password: "changeme"
+
+###############################
+#### CLOUD
+###############################
+
+        - name: "cloud-amazon-ec2"
+          kind: "aws"
+          description: "Credential for AWS"
+          username: "changeme"
+          password: "changeme"
+
+        - name: "cloud-google-gce"
+          kind: "gce"
+          description: "Credential for GCE"
+          username: "changeme"
+          ssh_key_data: "~/.ansible/vault/ssh/default"
+          project: "changeme"
+
+        - name: "cloud-microsoft-azure"
+          kind: "azure_rm"
+          description: "Credential for AZR"
+          client: "changeme"
+          subscription: "changeme"
+          tenant: "changeme"
+          username: "changeme"
+          password: "changeme"
+
+        - name: "cloud-openstack-xyz"
+          kind: "openstack"
+          description: "Credential for OSP"
+          host: "changeme"
+          domain: "changeme"
+          project: "changeme"
+          username: "changeme"
+          password: "changeme"
+
+        - name: "cloud-cloudforms-xyz"
+          kind: "cloudforms"
+          description: "Credential for CF"
+          host: "changeme"
+          username: "changeme"
+          password: "changeme"
+
+        - name: "cloud-vmware-xyz"
+          kind: "vmware"
+          description: "Credential for VMW"
+          host: "changeme"
+          username: "changeme"
+          password: "changeme"
+
+        - name: "cloud-tower-xyz"
+          kind: "tower"
+          description: "Credential for TWR"
+          host: "changeme"
+          username: "changeme"
+          password: "changeme"
