--- a/applications/ansible-tower/group_vars/ansible-tower/config.organization.job_templates.yml
+++ b/applications/ansible-tower/group_vars/ansible-tower/config.organization.job_templates.yml
@@ -13,9 +13,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
-#          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_banner"
           description: "Dev: nxos_banner"
@@ -24,9 +23,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
-#          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_feature"
           description: "Dev: nxos_feature"
@@ -35,9 +33,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
-#          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_vlan"
           description: "Dev: nxos_vlan"
@@ -46,10 +43,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
-#          ask_limit_on_launch: true
+          machine_credential: "empty-ssh"
           ask_extra_vars: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_switchport"
           description: "Dev: nxos_switchport"
@@ -58,10 +54,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
-#          ask_limit_on_launch: true
+          machine_credential: "empty-ssh"
           ask_extra_vars: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_running_config"
           description: "Dev: nxos_running_config"
@@ -70,9 +65,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
-#          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_tech_support"
           description: "Dev: nxos_tech_support"
@@ -81,9 +75,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_spanning_tree"
           description: "Dev: nxos_spanning_tree"
@@ -92,9 +86,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_arp"
           description: "Dev: nxos_arp"
@@ -103,9 +97,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_version"
           description: "Dev: nxos_version"
@@ -114,9 +108,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_cloud"
           description: "Dev: nxos_cloud"
@@ -125,9 +119,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_cloud_pod01"
           description: "Dev: nxos_cloud_pod01"
@@ -136,8 +130,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos:&pod01"
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_cloud_pod02"
           description: "Dev: nxos_cloud_pod02"
@@ -146,8 +140,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos:&pod01"
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_fabric"
           description: "Dev: nxos_fabric"
@@ -156,9 +150,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_fabric_spine"
           description: "Dev: nxos_fabric_spine"
@@ -167,8 +161,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos:&spine"
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: nxos_fabric_leaf"
           description: "Dev: nxos_fabric_leaf"
@@ -177,8 +171,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "nxos:&leaf"
-          machine_credential: "network-nxos-ssh"
-          network_credential: "network-nxos-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
 ########################################################################
 #                           Netops - IOS                              #
@@ -190,9 +184,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          ask_credential: "yes"
 
         - name: "Dev: ios_banner"
           description: "Dev: ios_banner"
@@ -201,9 +195,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
+          machine_credential: "empty-ssh"
 #          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          ask_credential: "yes"
 
         - name: "Dev: ios_vlan"
           description: "Dev: ios_vlan"
@@ -212,10 +206,9 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
-#          ask_limit_on_launch: true
+          machine_credential: "empty-ssh"
           ask_extra_vars: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          ask_credential: "yes"
 
         - name: "Dev: ios_running_config"
           description: "Dev: ios_running_config"
@@ -224,9 +217,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
-#          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: ios_tech_support"
           description: "Dev: ios_tech_support"
@@ -235,9 +227,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
-#          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: ios_spanning_tree"
           description: "Dev: ios_spanning_tree"
@@ -246,9 +237,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
-#          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: ios_arp"
           description: "Dev: ios_arp"
@@ -257,9 +247,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
-#          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
         - name: "Dev: ios_version"
           description: "Dev: ios_version"
@@ -268,9 +257,8 @@ ansible_tower_config:
           inventory: "netops"
           forks: 50
           limit: "ios"
-#          ask_limit_on_launch: true
-          machine_credential: "network-ios-ssh"
-          network_credential: "network-ios-net"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
 
 ########################################################################
 #                     Netops - F5                                      #
@@ -287,7 +275,7 @@ ansible_tower_config:
           forks: 50
           limit: "tmos"
           machine_credential: "empty-ssh"
-          network_credential: "empty-ssh"
+          ask_credential: "yes"
 
 ########################################################################
 #                     Netops - F5 - f5_system                          #
@@ -300,7 +288,7 @@ ansible_tower_config:
           forks: 50
           limit: "tmos"
           machine_credential: "empty-ssh"
-          network_credential: "empty-ssh"
+          ask_credential: "yes"
 
 ########################################################################
 #                     Netops - F5 - f5_vserver                          #
@@ -313,7 +301,7 @@ ansible_tower_config:
           forks: 50
           limit: "tmos"
           machine_credential: "empty-ssh"
-          network_credential: "empty-ssh"
+          ask_credential: "yes"
 
 ########################################################################
 #                     Netops - F5 - f5_facts                          #
@@ -326,7 +314,7 @@ ansible_tower_config:
           forks: 50
           limit: "tmos"
           machine_credential: "empty-ssh"
-          network_credential: "empty-ssh"
+          ask_credential: "yes"
 
 ########################################################################
 #                           Sysops - Lightbulb                         #
@@ -338,4 +326,80 @@ ansible_tower_config:
           inventory: "sysops"
           forks: 50
           limit: "web"
-          machine_credential: "system-linux-ssh"
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+########################################################################
+#                           Devops - Applications                      #
+########################################################################
+        - name: "devops-application-freeipa"
+          description: "devops-application-freeipa"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/freeipa/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-ansible-tower"
+          description: "devops-application-ansible-tower"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/ansible-tower/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-jenkins"
+          description: "devops-application-jenkins"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/jenkins/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-gitlab"
+          description: "devops-application-gitlab"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/gitlab/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-darkbulb-ios"
+          description: "devops-application-darkbulb-ios"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/darkbulb-ios/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-darkbulb-nxos"
+          description: "devops-application-darkbulb-nxos"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/darkbulb-nxos/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-darkbulb-eos"
+          description: "devops-application-darkbulb-eos"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/darkbulb-eos/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
+
+        - name: "devops-application-darkbulb-junos"
+          description: "devops-application-darkbulb-junos"
+          project: "Dev: victorock-ansible-devops"
+          playbook: "applications/darkbulb-junos/main.yml"
+          inventory: "devops"
+          forks: 50
+          machine_credential: "empty-ssh"
+          ask_credential: "yes"
