--- a/applications/ansible-tower/deploy.yml
+++ b/applications/ansible-tower/deploy.yml
@@ -1,3 +1,3 @@
-- include_tasks: deploy.tower-setup.yml
-- include_tasks: deploy.tower-config.yml
-- include_tasks: deploy.tower-facts.yml
+- include: deploy.tower-setup.yml
+- include: deploy.tower-config.yml
+- include: deploy.tower-facts.yml
